# VulkanTemplate

./: .clang-format  .gitignore  .justfile  CMakeLists.txt  LICENSE  README.md
shaders/: CMakeLists.txt  shader.vert
src/: consts.hpp  main.cpp
src/triangle_example/: color_blending_config.hpp  command_buffer.hpp  descriptor_layout.hpp  device_ext.hpp  dynamic_state.hpp  helper.hpp  image_view_details.hpp  multisampling.hpp  queue_family_indices.hpp  rasterizer.hpp  read_shaders.hpp  swap_chain_support_details.hpp  triangle_example.cpp  triangle_example.hpp  vertex_input.hpp
